frontend/test/should_pass/pattern_013.grg
pattern Foo
{
	x: Node;
	
	replace bla
	{
	}
	replace blub
	{
	}
}